--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "@handlebars/allow-prototype-access": "^1.0.5",
         "aws-sdk": "^2.1087.0",
         "bcryptjs": "^2.4.3",
+        "connect-flash": "^0.1.1",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-handlebars": "^6.0.3",
+        "flash": "^1.1.0",
         "fs": "^0.0.1-security",
         "hbs": "^4.2.0",
         "mysql": "^2.18.1"
